--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation "com.google.firebase:firebase-storage:19.2.1"
+    implementation "com.google.firebase:firebase-database:16.0.1"
 }
