--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Haseef4">
+        <activity android:name=".staff1"></activity>
+        <activity android:name=".staff" />
         <activity
             android:name=".restock"
             android:label="@string/title_activity_restock"
-            android:theme="@style/Theme.Haseef4.NoActionBar"></activity>
+            android:theme="@style/Theme.Haseef4.NoActionBar" />
         <activity
             android:name=".product"
             android:label="@string/title_activity_product"
